aa-regex/tests/fails/except_all.rs
use aa_regex::*;

fn main() {
    let wrong = except!(A, R, N, D, C, E, Q, G, H, I, L, K, M, F, P, S, T, W, Y, V);
}
